# ai_devs

./: .env-template  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  run_quadrant.sh
data/blueprints/: agent-techsistence-1712764168.json  aidevs_chatbot-1696525639.json  aidevs_memory_basic-1711559341.json  aidevs_process_file-1695994995.json  aidevs_slackdm-1696753963.json  aidevs_tasks-1696628694.json  aidevs_transcript-1696693379.json  aidevs_voice-1695287808.json  aidevs_watch_folder-1695994706.json
data/prompts/: books  category  cities  fixit  format  injection_lvl1  injection_lvl_2  meta_prompt  planets  structure  tailwind
src/: exceptions.py  models.py  openai_utils.py  ownapi_server.py  settings.py  task_template.py  utils.py
src/tasks/: blogger.py  embedding.py  functions.py  gnome.py  google.py  hello_api.py  inprompt.py  knowledge.py  liar.py  meme.py  moderation.py  optimaldb.py  ownapi.py  ownapi_server.py  ownapipro.py  people.py  people_prompts.py  rodo.py  scraper.py  search.py  task_template.py  tools.py  whisper.py  whoami.py
src/tasks/task_data/: ownapi_server.py
