[tool.poetry]
name = "ai-devs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
requests = "^2.31.0"
openai = "^1.14.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
